--- a/Ray_Tracer/Ray_Tracer.vcxproj
+++ b/Ray_Tracer/Ray_Tracer.vcxproj
@@ -11,13 +11,49 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Ray_Tracer\Tracers\MultipleObjects.h" />
+    <ClInclude Include="src\Ray_Tracer\Tracers\SingleSphere.h" />
     <ClInclude Include="src\Ray_Tracer\EntryPoint.h" />
     <ClInclude Include="src\Ray_Tracer\Application.h" />
     <ClInclude Include="src\Ray_Tracer\Core.h" />
+    <ClInclude Include="src\Ray_Tracer\GeometricObjects\GeometricObject.h" />
+    <ClInclude Include="src\Ray_Tracer\GeometricObjects\Plane.h" />
+    <ClInclude Include="src\Ray_Tracer\GeometricObjects\Sphere.h" />
+    <ClInclude Include="src\Ray_Tracer\image.h" />
+    <ClInclude Include="src\Ray_Tracer\Tracers\Tracer.h" />
+    <ClInclude Include="src\Ray_Tracer\Utilities\Constants.h" />
+    <ClInclude Include="src\Ray_Tracer\Utilities\Maths.h" />
+    <ClInclude Include="src\Ray_Tracer\Utilities\Matrix.h" />
+    <ClInclude Include="src\Ray_Tracer\Utilities\Normal.h" />
+    <ClInclude Include="src\Ray_Tracer\Utilities\Point3D.h" />
+    <ClInclude Include="src\Ray_Tracer\Utilities\Ray.h" />
+    <ClInclude Include="src\Ray_Tracer\Utilities\RGBColor.h" />
+    <ClInclude Include="src\Ray_Tracer\Utilities\ShadeRec.h" />
+    <ClInclude Include="src\Ray_Tracer\Utilities\Vector3D.h" />
+    <ClInclude Include="src\Ray_Tracer\Vendor\lodepng.h" />
+    <ClInclude Include="src\Ray_Tracer\World\ViewPlane.h" />
     <ClInclude Include="src\RT.h" />
+    <ClInclude Include="src\Ray_Tracer\World\World.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Ray_Tracer\Tracers\MultipleObjects.cpp" />
+    <ClCompile Include="src\Ray_Tracer\Tracers\SingleSphere.cpp" />
     <ClCompile Include="src\Ray_Tracer\Application.cpp" />
+    <ClCompile Include="src\Ray_Tracer\GeometricObjects\GeometricObject.cpp" />
+    <ClCompile Include="src\Ray_Tracer\GeometricObjects\Plane.cpp" />
+    <ClCompile Include="src\Ray_Tracer\GeometricObjects\Sphere.cpp" />
+    <ClCompile Include="src\Ray_Tracer\image.cpp" />
+    <ClCompile Include="src\Ray_Tracer\Tracers\Tracer.cpp" />
+    <ClCompile Include="src\Ray_Tracer\Utilities\Matrix.cpp" />
+    <ClCompile Include="src\Ray_Tracer\Utilities\Normal.cpp" />
+    <ClCompile Include="src\Ray_Tracer\Utilities\Point3D.cpp" />
+    <ClCompile Include="src\Ray_Tracer\Utilities\Ray.cpp" />
+    <ClCompile Include="src\Ray_Tracer\Utilities\RGBColor.cpp" />
+    <ClCompile Include="src\Ray_Tracer\Utilities\ShadeRec.cpp" />
+    <ClCompile Include="src\Ray_Tracer\Utilities\Vector3D.cpp" />
+    <ClCompile Include="src\Ray_Tracer\Vendor\lodepng.cpp" />
+    <ClCompile Include="src\Ray_Tracer\World\ViewPlane.cpp" />
+    <ClCompile Include="src\Ray_Tracer\World\World.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
